add_executable(share_ptr share_ptr.cpp)
add_executable(tenxun1 tenxun1.cpp)
add_executable(tenxun3 tenxun3.cpp)

add_executable(xiechen1 xiechen1.cpp)
add_executable(io_string_vector io_string_vector.cpp)
add_executable(multi_thread multi_thread.cpp)

add_executable(zhaoshang1 zhaoshang1.cpp)
add_executable(weizhong1 weizhong1.cpp)
add_executable(niuli niuli.cpp)