add_executable(share_ptr share_ptr.cpp)
add_executable(tenxun1 tenxun1.cpp)
add_executable(tenxun3 tenxun3.cpp)

add_executable(xiechen1 xiechen1.cpp)
add_executable(io_string_vector io_string_vector.cpp)
add_executable(multi_thread multi_thread.cpp)

add_executable(zhaoshang1 zhaoshang1.cpp)
add_executable(weizhong1 weizhong1.cpp)
add_executable(jingdong2 jingdong2.cpp)
add_executable(niuli niuli.cpp)
add_executable(reference reference.cpp)


add_executable(matrix_mul matrix_mul.cpp)

add_executable(xijian3 xijian3.cpp)
add_executable(xiaoma1 xiaoma1.cpp)
add_executable(xiaomai3 xiaomai3.cpp)
add_executable(huawei1 huawei1.cpp)
add_executable(huawei huawei2.cpp)
add_executable(wenyuan wenyuan.cpp)