add_executable(share_ptr share_ptr.cpp)
add_executable(tenxun1 tenxun1.cpp)
add_executable(tenxun3 tenxun3.cpp)

add_executable(xiechen1 xiechen1.cpp)
add_executable(io_string_vector io_string_vector.cpp)
add_executable(multi_thread multi_thread.cpp)

add_executable(zhaoshang1 zhaoshang1.cpp)
add_executable(weizhong1 weizhong1.cpp)
add_executable(jingdong2 jingdong2.cpp)
add_executable(niuli niuli.cpp)
add_executable(reference reference.cpp)

add_executable(xijian3 xijian3.cpp)
#add_executable(server_tcp server_tcp.cpp)
#add_executable(client_tcp client_tcp.cpp)
add_executable(yuewen yuewen.cpp)
add_executable(huya1 huya1.cpp)
add_executable(huawei huawei.cpp)
add_executable(c11_character c11_character.cpp)
add_executable(zijie zijie1.cpp)
add_executable(zijie2 zijie2.cpp)
add_executable(huawei4 huawei4.cpp)
add_executable(huawei5 huawei5.cpp)
