add_executable(12 12.cpp)
add_executable(32 32.cpp)
add_executable(33 33.cpp)
add_executable(38 38.cpp)
add_executable(44 44.cpp)
add_executable(45 45.cpp)
add_executable(46 46.cpp)
add_executable(47 47.cpp)
add_executable(54 54.cpp)
#add_executable(55j 55.cpp)
add_executable(56 56.cpp)
add_executable(57 57.cpp)
add_executable(59 59.cpp)
add_executable(61 61.cpp)
add_executable(66 66.cpp)
add_executable(5 5.cpp)
add_executable(3 3.cpp)
add_executable(dijkstra_heap dijkstra_heap.cpp)
add_executable(4 4.cpp)
add_executable(51 51.cpp)
add_executable(j_17 j_17.cpp)
add_executable(j_21 j_21.cpp)
